--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <link rel="apple-touch-icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none'%3E%3Crect width='24' height='24' rx='5' fill='%2310b981'/%3E%3Cpath d='M9 7h6m0 10v-3m-3 3h.01M9 17h.01M9 14h.01M12 14h.01M15 11h.01M12 11h.01M9 11h.01M7 21h10a2 2 0 002-2V5a2 2 0 00-2-2H7a2 2 0 00-2 2v14a2 2 0 002 2z' stroke='white' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E">
     <link rel="manifest" href="manifest.json">
 
-    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -27,19 +26,30 @@
             background-color: #0f172a;
         }
     </style>
+    <!-- Load Tailwind CSS first -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Then configure Tailwind after it's loaded -->
     <script>
-        tailwind.config = {
-            darkMode: 'class',
-            theme: {
-                extend: {
-                    colors: {
-                        primary: '#10b981',
-                        secondary: '#3b82f6',
-                        darkBg: '#0f172a',
-                        darkCard: '#1e293b'
+        // Log untuk debugging: Memastikan Tailwind sudah dimuat sebelum konfigurasi
+        console.log('Tailwind script loaded, checking if tailwind object exists:', typeof tailwind);
+        
+        if (typeof tailwind !== 'undefined') {
+            tailwind.config = {
+                darkMode: 'class',
+                theme: {
+                    extend: {
+                        colors: {
+                            primary: '#10b981',
+                            secondary: '#3b82f6',
+                            darkBg: '#0f172a',
+                            darkCard: '#1e293b'
+                        }
                     }
                 }
-            }
+            };
+            console.log('Tailwind configuration applied successfully');
+        } else {
+            console.error('Tailwind object is not defined! Script order issue detected.');
         }
     </script>
 <script type="importmap">
